--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,8 +3,8 @@
 
 <div class="app-quote">
   {{#unless this.welcomeMessageSeen}}
-    All your snippets stay safe in your browser.<br />
-    Always. <br />
+    All your snippets stay safe in your browser.<br>
+    Always. <br>
     Not even the incognito mode can view them.
     <button class="mini-button" {{action this.toggleWelcomeMessage}}>X</button>
   {{else}}
