--- a/app/templates/components/header.hbs
+++ b/app/templates/components/header.hbs
@@ -1,7 +1,8 @@
+{{yield}}
 <div class="header" ...attributes>
   <div class="left-header">
     <div class="header-logo"></div>
-    {{#link-to "index"}}
+    {{#link-to "index" undefined}}
       <svg width="40px" height="40px" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink">
         <title>Highlight</title>
@@ -20,7 +21,7 @@
     {{/link-to}}
   </div>
   <div class="right-header">
-    {{#link-to "add-gist"}}
+    {{#link-to "add-gist" undefined}}
       <span>New Gist</span>
     {{/link-to}}
     <div class="dark-mode-toggle" {{did-insert (action this.loadMode)}}>
