Add default placeholder text and image

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -32,7 +32,8 @@
     </div>
   {{else}}
     <div class="is-empty">
-      <h2>No Gists! Please add one!</h2>
+      <h2>No favorite snippets so far !?  Try adding one !</h2>
+      <div class="code-placeholder"></div>
     </div>
   {{/each}}
 </div>
