--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -14,6 +14,7 @@ $primary-color: #333;
   --foreground: #000;
   --border: #df4d36;
   --highlight: #000;
+  --sample-code-image-url: url("/images/sample-code-light.png")
 }
 
 body {
@@ -27,6 +28,7 @@ body.dark-mode {
   --foreground: #fff;
   --border: #df4d36ab;
   --highlight: #df4d36;
+  --sample-code-image-url: url("/images/sample-code-dark.png");
 }
 
 a {
@@ -392,9 +394,20 @@ a {
   flex-direction: column;
   min-height: calc(100vh - 130px);
   .is-empty {
+    margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    .code-placeholder {
+      margin-top: 20px;
+      transition: all 1s ease-in-out;
+      background-image: var(--sample-code-image-url);
+      background-size: 100% 100%;
+      background-position: initial;
+      width: 850px;
+      height: 345px;
+    }
   }
   small {
     width: 92%;
