Update travis.yml with after_success

--- a/app/templates/components/footer.hbs
+++ b/app/templates/components/footer.hbs
@@ -4,8 +4,9 @@
     <span>© 2019 Ember Community</span>
   </div>
   <div>
-    <a href="https://github.com/happyvig/ember-octane-gist-it" rel="noreferrer" target="_blank">Github</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="">About</a>
+    <a href="https://github.com/happyvig/ember-octane-gist-it" rel="noreferrer" target="_blank">Github</a>
+    {{!-- &nbsp;&nbsp;|&nbsp;&nbsp; --}}
+    {{!-- <a href="">About</a> --}}
   </div>
   <div class="powered-by">
     <span class="lower">Powered by &nbsp;</span>
