Added meta tags

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -425,7 +425,7 @@ a {
     pre code { font-size: 0.8em; }
   }
   #delete-gist {
-    background-color: #f65050;
+    background-color: #df4d36;
     color: #fff;
 
   }
