Add percy badge in README.md

--- a/app/templates/components/footer.hbs
+++ b/app/templates/components/footer.hbs
@@ -5,8 +5,8 @@
   </div>
   <div>
     <a href="https://github.com/happyvig/ember-octane-gist-it" rel="noreferrer" target="_blank">Github</a>
-    {{!-- &nbsp;&nbsp;|&nbsp;&nbsp; --}}
-    {{!-- <a href="">About</a> --}}
+    &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="">About</a>
   </div>
   <div class="powered-by">
     <span class="lower">Powered by &nbsp;</span>
