--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -254,9 +254,11 @@ a {
 .gist-wrapper {
   //   padding: 40px;
   max-width: 1012px;
+  margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
   min-height: 600px;
+  h2 { text-align: center; font-size: 18px;}
   .gist-description {
     display: flex;
     width: 100%;
